--- a/docs/README.adoc
+++ b/docs/README.adoc
@@ -2,8 +2,8 @@
 :icons: font
 :figure-caption: 図
 
-image:https://img.shields.io/badge/Minecraft_Version-1.20.1-green[]
-image:https://img.shields.io/badge/ResourcePack_Format-15-blue[]
+link:https://www.minecraft.net/ja-jp[image:https://img.shields.io/modrinth/game-versions/AhnrHmLv?label=Minecraft+Version&color=green[]]
+link:https://feedback.minecraft.net/hc/en-us/articles/27547857163917-Minecraft-Java-Edition-1-21-Tricky-Trials#h_01J095CMMFY7WKFYWVSXBMPTR7[image:https://img.shields.io/badge/ResourcePack_Format-34-blue[]]
 
 刀剣クラフト用のリソースパックです。
 このテンプレートには刀剣と刀剣男士のテクスチャが含まれています。
@@ -47,11 +47,9 @@ image::img/install-gamemenu.png[]
 +
 image::img/install-setting.png[]
 
-. 画面左下の``パックフォルダーを開く``を選択
+. リソースパックのZIPを画面にドラッグ＆ドロップ
 +
 image::img/install-openfolder.png[]
-
-. ``resourcepacks``フォルダーが開かれるので、ZIPファイルを入れる
 
 . 作成したZIPファイルの▶️ボタンを押す
 +
